--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"yalungelin",
     "subTitle":"Workspace",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "avatarUrl":"https://iconic-api.onrender.com/dark/linux.svg",
     "GMEEK_VERSION":"last"
 }
