--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"yalungelin",
-    "subTitle":"Workspace",
+    "title":"清穷白马，瘦道西风",
+    "subTitle":"笔记",
     "avatarUrl":"https://iconic-api.onrender.com/dark/linux",
     "GMEEK_VERSION":"last"
 }
