--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "title":"清穷白马，瘦道西风",
+    "title":"瘦道西风,清穷白马",
     "subTitle":"笔记",
     "avatarUrl":"https://iconic-api.onrender.com/dark/linux",
     "GMEEK_VERSION":"last"
