Update title in config.json

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "title":"瘦道西风,清穷白马",
+    "title":"比海更深",
     "subTitle":"笔记",
     "avatarUrl":"https://iconic-api.onrender.com/dark/linux",
     "GMEEK_VERSION":"last"
